2003-05-28  JMB  Enum option sorting, import, and export

    Added a button to the enum editor which sorts the enum's options in
    alphabetical order.  Clicking once sorts in ascending order, clicking
    again sorts in descending order.  Helps keep enums with many options
    organized (such as a list of people's names).

    The enum editor also has new import and export buttons.  Export creates
    a text file with each option on a separate line.  Import opens such a
    file and adds to the enum any lines from it which aren't already listed
    as options.

2003-05-24  JMB  Better menu handling in desktop versions

    In at least some versions of Qt3, the menu was present but no text was
    shown.  Now using a more normal display method which seems to work more
    reliably.

2003-05-23  JMB  Alternate row shading, calculator widget

    Even and odd rows now use different background colors to make it easier
    to follow a row across the screen.  The default colors are white and
    light gray, but can be specified via buttons in the Preferences dialog.
    These colors are used in the data viewer, columns editor, view editor,
    and sorting editor.

    At the end of each entry field for a numeric value (type integer or
    decimal), there is a button which will launch a simple calculator,
    starting with the currently displayed value.  Clicking OK will place
    the current result into the entry field.  This makes it easier to enter
    data that needs to be calculated before entry, and is often faster than
    entering a number via the keyboard or an on-screen input method.

2003-04-10  JMB  Windows CSV import bugfix

    In version 1.6, importing a CSV file on the Windows version would produce
    an empty error dialog and fail to update the display even though the
    import was successful; this has been corrected.

2003-04-03  JMB  Enum update bugfix, file overwrite warning
