@@ -1,5 +1,4 @@
 File properties dialog (size, rows, etc.)
 Option to hide navigation bar (and show all rows)
-Option to show Notes as multiline edit fields in row editor
 Pie chart of enum options in summary dialog
 Type letter to go to rows whose first text field in the view starts with it
