@@ -1,8 +1,8 @@
 TEMPLATE        = app
 #CONFIG         = qt warn_on debug
 CONFIG          = qt warn_on release
-HEADERS         = portabase.h inputdialog.h view.h viewdisplay.h database.h datatypes.h dbeditor.h columneditor.h roweditor.h csvutils.h importdialog.h vieweditor.h noteeditor.h notebutton.h sorteditor.h condition.h filter.h conditioneditor.h filtereditor.h datewidget.h QtaDatePicker.h preferences.h enumeditor.h enummanager.h timewidget.h pdbfile.h mobiledb.h importutils.h rowviewer.h xmlexport.h xmlimport.h commandline.h bytestream.h crypto.h passdialog.h newfiledialog.h csverror.h shadedlistitem.h colordialog.h colorbutton.h calculator.h numberwidget.h
-SOURCES         = main.cpp portabase.cpp inputdialog.cpp view.cpp viewdisplay.cpp database.cpp dbeditor.cpp columneditor.cpp roweditor.cpp csvutils.cpp importdialog.cpp vieweditor.cpp noteeditor.cpp notebutton.cpp sorteditor.cpp condition.cpp filter.cpp conditioneditor.cpp filtereditor.cpp datewidget.cpp QtaDatePicker.cpp preferences.cpp enumeditor.cpp enummanager.cpp timewidget.cpp pdbfile.cpp mobiledb.cpp importutils.cpp rowviewer.cpp xmlexport.cpp xmlimport.cpp commandline.cpp bytestream.cpp crypto.cpp passdialog.cpp newfiledialog.cpp csverror.cpp shadedlistitem.cpp colordialog.cpp colorbutton.cpp calculator.cpp numberwidget.cpp
+HEADERS         = portabase.h inputdialog.h view.h viewdisplay.h database.h datatypes.h dbeditor.h columneditor.h roweditor.h csvutils.h importdialog.h vieweditor.h noteeditor.h notebutton.h sorteditor.h condition.h filter.h conditioneditor.h filtereditor.h datewidget.h QtaDatePicker.h preferences.h enumeditor.h enummanager.h timewidget.h pdbfile.h mobiledb.h importutils.h rowviewer.h xmlexport.h xmlimport.h commandline.h bytestream.h crypto.h passdialog.h newfiledialog.h csverror.h shadedlistitem.h colordialog.h colorbutton.h calculator.h numberwidget.h dynamicedit.h
+SOURCES         = main.cpp portabase.cpp inputdialog.cpp view.cpp viewdisplay.cpp database.cpp dbeditor.cpp columneditor.cpp roweditor.cpp csvutils.cpp importdialog.cpp vieweditor.cpp noteeditor.cpp notebutton.cpp sorteditor.cpp condition.cpp filter.cpp conditioneditor.cpp filtereditor.cpp datewidget.cpp QtaDatePicker.cpp preferences.cpp enumeditor.cpp enummanager.cpp timewidget.cpp pdbfile.cpp mobiledb.cpp importutils.cpp rowviewer.cpp xmlexport.cpp xmlimport.cpp commandline.cpp bytestream.cpp crypto.cpp passdialog.cpp newfiledialog.cpp csverror.cpp shadedlistitem.cpp colordialog.cpp colorbutton.cpp calculator.cpp numberwidget.cpp dynamicedit.cpp
 TRANSLATIONS    = portabase_ja.ts
 INCLUDEPATH     += $(QPEDIR)/include
 DEPENDPATH      += $(QPEDIR)/include
